# strokemap

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: cicd.yml
src/strokemap/: __init__.py  cli.py  generator.py  pdf_generator.py
tests/: conftest.py  test_generator.py
